<resources>
    <string name="app_name">Bloomwalls</string>
    <string name="acount_availibility">Already have an account? %1$s</string>
    <string name="login_link">Login</string>
    <string name="create_account">Create Account</string>
    <string name="err_msg_phone">Enter valid phone number</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_password">Password</string>
    <string name="country">Country</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="personal_information">Personal information</string>
    <string name="city">City</string>
    <string name="finish">Finish</string>
    <string name="verification">Verification</string>
    <string name="choose_your_code_input_method">Choose your code input method</string>
    <string name="code">Code</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="back">Back</string>
    <string name="direct">Direct</string>
    <string name="_1_to_1">1 to 1</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</string>
    <string name="selected_type">Selected type is not to be</string>
    <string name="skip">Skip</string>
    <string name="account_type">Account type</string>
    <string name="selected_type_is_not_to_be_changed">Selected type is not to be changed</string>
    <string name="hire">Hire</string>
    <string name="work">Work</string>
    <string name="resend_code">If you haven’t received the e-mail click Resend code</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="terms_of_service">By clicking \'\'Create Account\'\' I agree to BloomWalls Terms of Service</string>
    <string name="sign_up_to_work">Sign up to work</string>
    <string name="confirmation">Confirmation</string>
    <string name="check_your_email_and_enter_the_code">Check your email and enter the code</string>
    <string name="reset_password">Reset password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="login_to_bloomwalls">Login to BloomWalls</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="get_started">Get Started</string>
    <string name="not_a_member_yet_sign_up">Not a member yet? Sign up</string>


    <string-array name="gmt_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>
