<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bloomWhite"
    android:id="@+id/login_main">

    <ImageButton
        android:id="@+id/login_back_btn"
        android:layout_width="12.5dp"
        android:layout_height="21.6dp"
        android:layout_marginStart="10.5dp"
        android:layout_marginTop="30.24dp"
        android:background="@color/bloomWhite"
        android:scaleType="fitCenter"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/login_forgot_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34.56dp"
        android:layout_marginEnd="20.6dp"
        android:text="@string/forgot_password"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorBlack"
        android:textSize="11.5sp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="-1.44sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_title"
        android:layout_marginStart="28.3dp"
        android:layout_marginTop="65.232dp"
        android:text="@string/login_to_bloomwalls"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_enail_or_phone"
        android:layout_marginTop="110.448dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/HintText"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_enail_or_phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_or_phone_number"
            android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:layout_below="@+id/login_enail_or_phone"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/HintText"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:id="@+id/login_get_started_btn"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28.8dp"
        android:text="@string/get_started"
        android:textColor="@color/colorBlack"
        android:textAllCaps="false"
        android:background="@drawable/button_style_white"
        android:textSize="18sp"
        android:stateListAnimator="@null"/>

    <TextView
        android:id="@+id/login_login_link"
        android:layout_width="168dp"
        android:layout_height="17dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42.7dp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="11.5sp" />

</RelativeLayout>