<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bloomWhite"
    android:id="@+id/personal_information_main">

    <ImageButton
        android:layout_width="12.5dp"
        android:layout_height="21.6dp"
        android:src="@drawable/back"
        android:background="@color/bloomWhite"
        android:id="@+id/personal_information_back_btn"
        android:layout_marginStart="10.5dp"
        android:layout_marginTop="30.24dp"
        android:scaleType="fitCenter"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/personal_information_title"
        android:layout_marginStart="28.3dp"
        android:layout_marginTop="65.232dp"
        android:text="@string/personal_information"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/personal_information_first_name"
        android:layout_marginTop="110.448dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/HintText"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/personal_information_first_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/personal_information_last_name"
        android:layout_below="@+id/personal_information_first_name"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/HintText"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/personal_information_last_name_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/personal_information_country"
        android:layout_below="@+id/personal_information_last_name"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/HintText"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/personal_information_country_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/personal_information_city"
        android:layout_below="@+id/personal_information_country"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/HintText"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/personal_information_city_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/personal_information_spinner"
        android:layout_below="@+id/personal_information_city"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/HintText"/>

    <Button
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:id="@+id/personal_information_finish_btn"
        android:layout_below="@+id/personal_information_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28.8dp"
        android:text="@string/finish"
        android:textColor="@color/colorBlack"
        android:textAllCaps="false"
        android:background="@drawable/button_style_white"
        android:textSize="18sp"
        android:stateListAnimator="@null"/>

</RelativeLayout>