<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bloomWhite"
    android:id="@+id/forgot_password_main">

    <ImageButton
        android:layout_width="12.5dp"
        android:layout_height="21.6dp"
        android:src="@drawable/back"
        android:background="@color/bloomWhite"
        android:id="@+id/forgot_password_back_btn"
        android:layout_marginStart="10.5dp"
        android:layout_marginTop="30.24dp"
        android:scaleType="fitCenter"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password_title"
        android:layout_marginStart="28.3dp"
        android:layout_marginTop="65.232dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password_email"
        android:layout_marginTop="110.448dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/HintText"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/forgot_password_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>



    <Button
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:id="@+id/forgot_password_reset_btn"
        android:layout_below="@+id/forgot_password_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28.8dp"
        android:text="@string/reset_password"
        android:textColor="@color/bloomWhite"
        android:textAllCaps="false"
        android:background="@drawable/button_style_black"
        android:textSize="18sp"
        android:stateListAnimator="@null"/>

</RelativeLayout>