<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bloomWhite"
    android:id="@+id/verification_main">

    <ImageButton
        android:id="@+id/verification_back_btn"
        android:layout_width="12.5dp"
        android:layout_height="21.6dp"
        android:layout_marginStart="10.5dp"
        android:layout_marginTop="30.24dp"
        android:background="@color/bloomWhite"
        android:scaleType="fitCenter"
        android:src="@drawable/back" />

    <TextView

        android:id="@+id/verification_forgot_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34.56dp"
        android:layout_marginEnd="20.6dp"
        android:text="@string/forgot_password"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorBlack"
        android:textSize="11.5sp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="-1.44sp"/>

    <TextView
        android:id="@+id/verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28.3dp"
        android:layout_marginTop="65.232dp"
        android:text="@string/verification"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/code_input_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verification"
        android:layout_marginStart="28.8dp"
        android:layout_marginTop="7.632dp"
        android:text="@string/choose_your_code_input_method"
        android:textColor="@color/colorGrey"
        android:textSize="14.4sp" />

    <LinearLayout
        android:id="@+id/linear_verification"
        android:layout_width="315dp"
        android:layout_height="104dp"
        android:layout_below="@+id/code_input_method"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24.5dp"
        android:gravity="center"
        android:orientation="horizontal">


        <android.support.v7.widget.CardView

            android:layout_width="144dp"
            android:layout_height="96dp"
            app:cardCornerRadius="18dp"
            android:elevation="25dp"
            android:id="@+id/card_email"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardElevation="4dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/verification_linear_1">

                <ImageView
                    android:id="@+id/email_pic"
                    android:layout_width="48dp"
                    android:layout_height="34.1dp"
                    android:layout_marginEnd="14dp"
                    android:src="@drawable/email"
                    android:foreground="?android:attr/selectableItemBackground"
                    />

                <TextView
                    android:id="@+id/email_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="17.3sp"
                    android:textColor="@color/colorBlack"
                    />

            </LinearLayout>



        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="144dp"
            android:layout_height="96dp"
            app:cardCornerRadius="18dp"
            android:elevation="25dp"
            android:layout_marginStart="21.6dp"
            android:id="@+id/card_sms"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/verification_linear_2">

                <ImageView
                    android:id="@+id/sms_pic"
                    android:layout_width="31.3dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="14dp"
                    android:src="@drawable/sms"
                    />

                <TextView
                    android:id="@+id/sms_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sms"
                    android:textSize="17.3sp"
                    android:textColor="@color/colorBlack"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <EditText
        android:id="@+id/code_input"
        android:layout_width="302.4dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_verification"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/code"
        android:inputType="number"
        android:textSize="14.4sp"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textColorHighlight="@color/colorBlack"
        />


    <Button
        android:id="@+id/verification_button_next"
        android:layout_width="302.4dp"
        android:layout_height="48dp"
        android:layout_below="@+id/code_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_style_white"
        android:text="@string/next"
        android:textSize="17.3sp"
        android:lineSpacingExtra="-1.872sp"
        android:textAllCaps="false"
        android:stateListAnimator="@null"
        android:foreground="?android:attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/verification_resend_code_link"
        android:layout_width="163dp"
        android:layout_height="27.4dp"
        android:layout_below="@id/verification_button_next"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="11.49sp" />

    <TextView
        android:id="@+id/verification_login_link"
        android:layout_width="168dp"
        android:layout_height="17dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42.7dp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="11.5sp" />


</RelativeLayout>